kasten/kasten-data-protection-by-label/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno_data_protection_tests
policies:
- ../kasten-data-protection-by-label.yaml
resources:
- nginx-deployment.yaml
results:
- kind: Deployment
  policy: kasten-data-protection-by-label
  resources:
  - nginx-deployment-invalid
  result: fail
  rule: kasten-data-protection-by-label
- kind: Deployment
  policy: kasten-data-protection-by-label
  resources:
  - nginx-deployment-pass
  result: pass
  rule: kasten-data-protection-by-label
- kind: Deployment
  policy: kasten-data-protection-by-label
  resources:
  - nginx-deployment-none
  result: pass
  rule: kasten-data-protection-by-label
- kind: Deployment
  policy: kasten-data-protection-by-label
  resources:
  - nginx-deployment-skipped
  result: skip
  rule: kasten-data-protection-by-label
